<resources>
    <string name="app_name">Dom\'s HiFi Sci-Fi</string>

    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="correct_response">Your response was correct</string>
    <string name="incorrect_response">Your response was incorrect. Sorry : (.</string>

    <string name="action_settings">Settings</string>
    <string name="prev_button">Prev</string>
    <string name="trivia_title">Choose Wisely!</string>
    <string name="playerScore">0</string>
    <string name="science_picture_description">displays science picture which represents users knowledge</string>
    <string name="GameOver">You have gone through the entire. Question Bank Please Exit the game now!</string>
    <string name="cheat_button">Cheat!</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="judgment_toast">Cheating is wrong.</string>

</resources>
