<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#ff62c5ff"
    android:id="@+id/R">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/trivia_title"
        android:id="@+id/trivia_title"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:id="@+id/question_text_view"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/true_button"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/true_button"
            android:background="#ff2f1eff"/>

        <Button
            android:id="@+id/false_button"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:text="@string/false_button"
            android:background="#ffff1728"/>


    </LinearLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:text="@string/cheat_button"
        android:id="@+id/cheat_button"
        android:clickable="false"
        android:background="#ff37ff5c"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/playerScore"
        android:id="@+id/playerScore"
        android:textColor="#ffff182e"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sciencePicture"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/science_picture_description"
        android:maxHeight="400dp"
        android:maxWidth="400dp"
        android:adjustViewBounds="false"/>

</LinearLayout>